{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 859,
  "lineage": "66e02383-4e2b-2296-161a-7d0b052e1349",
  "resources": [
    {
      "module": "module.linux-n01649123",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "linux_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "n01649123-vm1",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3423e856-3fd7-427a-82f5-39d44c9bd937/resourceGroups/9123-RG/providers/Microsoft.Network/networkInterfaces/n01649123-vm1-nic",
            "internal_domain_name_suffix": "a4yvtuvzwhsu5nzwremvcbvjqb.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "n01649123-vm1-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/3423e856-3fd7-427a-82f5-39d44c9bd937/resourceGroups/9123-RG/providers/Microsoft.Network/publicIPAddresses/n01649123-vm1-pip",
                "subnet_id": "/subscriptions/3423e856-3fd7-427a-82f5-39d44c9bd937/resourceGroups/9123-RG/providers/Microsoft.Network/virtualNetworks/9123-VNET/subnets/9123-SUBNET"
              }
            ],
            "location": "canadacentral",
            "name": "n01649123-vm1-nic",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "9123-RG"
          },
          "dependencies": [
            "module.linux-n01649123.azurerm_public_ip.linux_pip",
            "module.network-n01649123.azurerm_subnet.subnet",
            "module.network-n01649123.azurerm_virtual_network.vnet",
            "module.rgroup-n01649123.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "n01649123-vm2",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3423e856-3fd7-427a-82f5-39d44c9bd937/resourceGroups/9123-RG/providers/Microsoft.Network/networkInterfaces/n01649123-vm2-nic",
            "internal_domain_name_suffix": "a4yvtuvzwhsu5nzwremvcbvjqb.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "n01649123-vm2-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/3423e856-3fd7-427a-82f5-39d44c9bd937/resourceGroups/9123-RG/providers/Microsoft.Network/publicIPAddresses/n01649123-vm2-pip",
                "subnet_id": "/subscriptions/3423e856-3fd7-427a-82f5-39d44c9bd937/resourceGroups/9123-RG/providers/Microsoft.Network/virtualNetworks/9123-VNET/subnets/9123-SUBNET"
              }
            ],
            "location": "canadacentral",
            "name": "n01649123-vm2-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "9123-RG"
          },
          "dependencies": [
            "module.linux-n01649123.azurerm_public_ip.linux_pip",
            "module.network-n01649123.azurerm_subnet.subnet",
            "module.network-n01649123.azurerm_virtual_network.vnet",
            "module.rgroup-n01649123.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "n01649123-vm3",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3423e856-3fd7-427a-82f5-39d44c9bd937/resourceGroups/9123-RG/providers/Microsoft.Network/networkInterfaces/n01649123-vm3-nic",
            "internal_domain_name_suffix": "a4yvtuvzwhsu5nzwremvcbvjqb.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "n01649123-vm3-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.1.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/3423e856-3fd7-427a-82f5-39d44c9bd937/resourceGroups/9123-RG/providers/Microsoft.Network/publicIPAddresses/n01649123-vm3-pip",
                "subnet_id": "/subscriptions/3423e856-3fd7-427a-82f5-39d44c9bd937/resourceGroups/9123-RG/providers/Microsoft.Network/virtualNetworks/9123-VNET/subnets/9123-SUBNET"
              }
            ],
            "location": "canadacentral",
            "name": "n01649123-vm3-nic",
            "private_ip_address": "10.0.1.6",
            "private_ip_addresses": [
              "10.0.1.6"
            ],
            "resource_group_name": "9123-RG"
          },
          "dependencies": [
            "module.linux-n01649123.azurerm_public_ip.linux_pip",
            "module.network-n01649123.azurerm_subnet.subnet",
            "module.network-n01649123.azurerm_virtual_network.vnet",
            "module.rgroup-n01649123.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.linux-n01649123",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "linux_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "n01649123-vm1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "n01649123-vm1-pip",
            "fqdn": "n01649123-vm1-pip.canadacentral.cloudapp.azure.com",
            "id": "/subscriptions/3423e856-3fd7-427a-82f5-39d44c9bd937/resourceGroups/9123-RG/providers/Microsoft.Network/publicIPAddresses/n01649123-vm1-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "n01649123-vm1-pip",
            "resource_group_name": "9123-RG",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.rgroup-n01649123.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "n01649123-vm2",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "n01649123-vm2-pip",
            "fqdn": "n01649123-vm2-pip.canadacentral.cloudapp.azure.com",
            "id": "/subscriptions/3423e856-3fd7-427a-82f5-39d44c9bd937/resourceGroups/9123-RG/providers/Microsoft.Network/publicIPAddresses/n01649123-vm2-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "n01649123-vm2-pip",
            "resource_group_name": "9123-RG",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.rgroup-n01649123.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "n01649123-vm3",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "n01649123-vm3-pip",
            "fqdn": "n01649123-vm3-pip.canadacentral.cloudapp.azure.com",
            "id": "/subscriptions/3423e856-3fd7-427a-82f5-39d44c9bd937/resourceGroups/9123-RG/providers/Microsoft.Network/publicIPAddresses/n01649123-vm3-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "n01649123-vm3-pip",
            "resource_group_name": "9123-RG",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.rgroup-n01649123.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer-n01649123",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/3423e856-3fd7-427a-82f5-39d44c9bd937/resourceGroups/9123-RG/providers/Microsoft.Network/loadBalancers/lb-9123/frontendIPConfigurations/PublicIPAddress",
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/3423e856-3fd7-427a-82f5-39d44c9bd937/resourceGroups/9123-RG/providers/Microsoft.Network/publicIPAddresses/lb9123_public_ip"
              }
            ],
            "id": "/subscriptions/3423e856-3fd7-427a-82f5-39d44c9bd937/resourceGroups/9123-RG/providers/Microsoft.Network/loadBalancers/lb-9123",
            "location": "canadacentral",
            "name": "lb-9123",
            "resource_group_name": "9123-RG",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.loadbalancer-n01649123.azurerm_public_ip.public_ip",
            "module.rgroup-n01649123.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer-n01649123",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "lb_backend_address_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3423e856-3fd7-427a-82f5-39d44c9bd937/resourceGroups/9123-RG/providers/Microsoft.Network/loadBalancers/lb-9123/backendAddressPools/lb9123_address_pool",
            "loadbalancer_id": "/subscriptions/3423e856-3fd7-427a-82f5-39d44c9bd937/resourceGroups/9123-RG/providers/Microsoft.Network/loadBalancers/lb-9123",
            "name": "lb9123_address_pool"
          },
          "dependencies": [
            "module.loadbalancer-n01649123.azurerm_lb.lb",
            "module.loadbalancer-n01649123.azurerm_public_ip.public_ip",
            "module.rgroup-n01649123.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer-n01649123",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "lb_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3423e856-3fd7-427a-82f5-39d44c9bd937/resourceGroups/9123-RG/providers/Microsoft.Network/loadBalancers/lb-9123/probes/ssh-running-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/3423e856-3fd7-427a-82f5-39d44c9bd937/resourceGroups/9123-RG/providers/Microsoft.Network/loadBalancers/lb-9123",
            "name": "ssh-running-probe",
            "number_of_probes": 2,
            "port": 22,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "dependencies": [
            "module.loadbalancer-n01649123.azurerm_lb.lb",
            "module.loadbalancer-n01649123.azurerm_public_ip.public_ip",
            "module.rgroup-n01649123.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer-n01649123",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lb_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/3423e856-3fd7-427a-82f5-39d44c9bd937/resourceGroups/9123-RG/providers/Microsoft.Network/loadBalancers/lb-9123/backendAddressPools/lb9123_address_pool"
            ],
            "backend_port": 3389,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/3423e856-3fd7-427a-82f5-39d44c9bd937/resourceGroups/9123-RG/providers/Microsoft.Network/loadBalancers/lb-9123/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 3389,
            "id": "/subscriptions/3423e856-3fd7-427a-82f5-39d44c9bd937/resourceGroups/9123-RG/providers/Microsoft.Network/loadBalancers/lb-9123/loadBalancingRules/LBRule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/3423e856-3fd7-427a-82f5-39d44c9bd937/resourceGroups/9123-RG/providers/Microsoft.Network/loadBalancers/lb-9123",
            "name": "LBRule",
            "probe_id": "/subscriptions/3423e856-3fd7-427a-82f5-39d44c9bd937/resourceGroups/9123-RG/providers/Microsoft.Network/loadBalancers/lb-9123/probes/ssh-running-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "module.loadbalancer-n01649123.azurerm_lb.lb",
            "module.loadbalancer-n01649123.azurerm_lb_backend_address_pool.lb_backend_address_pool",
            "module.loadbalancer-n01649123.azurerm_lb_probe.lb_probe",
            "module.loadbalancer-n01649123.azurerm_public_ip.public_ip",
            "module.rgroup-n01649123.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer-n01649123",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/3423e856-3fd7-427a-82f5-39d44c9bd937/resourceGroups/9123-RG/providers/Microsoft.Network/publicIPAddresses/lb9123_public_ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "lb9123_public_ip",
            "resource_group_name": "9123-RG",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.rgroup-n01649123.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network-n01649123",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3423e856-3fd7-427a-82f5-39d44c9bd937/resourceGroups/9123-RG/providers/Microsoft.Network/networkSecurityGroups/9123-NSG",
            "location": "canadacentral",
            "name": "9123-NSG",
            "resource_group_name": "9123-RG",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rgroup-n01649123.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network-n01649123",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rules-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "rule1",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3423e856-3fd7-427a-82f5-39d44c9bd937/resourceGroups/9123-RG/providers/Microsoft.Network/networkSecurityGroups/9123-NSG/securityRules/rule1",
            "name": "rule1",
            "network_security_group_name": "9123-NSG",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "9123-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network-n01649123.azurerm_network_security_group.nsg",
            "module.rgroup-n01649123.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "rule2",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3423e856-3fd7-427a-82f5-39d44c9bd937/resourceGroups/9123-RG/providers/Microsoft.Network/networkSecurityGroups/9123-NSG/securityRules/rule2",
            "name": "rule2",
            "network_security_group_name": "9123-NSG",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "9123-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network-n01649123.azurerm_network_security_group.nsg",
            "module.rgroup-n01649123.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "rule3",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3423e856-3fd7-427a-82f5-39d44c9bd937/resourceGroups/9123-RG/providers/Microsoft.Network/networkSecurityGroups/9123-NSG/securityRules/rule3",
            "name": "rule3",
            "network_security_group_name": "9123-NSG",
            "priority": 300,
            "protocol": "Tcp",
            "resource_group_name": "9123-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network-n01649123.azurerm_network_security_group.nsg",
            "module.rgroup-n01649123.azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": "rule4",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "5985",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3423e856-3fd7-427a-82f5-39d44c9bd937/resourceGroups/9123-RG/providers/Microsoft.Network/networkSecurityGroups/9123-NSG/securityRules/rule4",
            "name": "rule4",
            "network_security_group_name": "9123-NSG",
            "priority": 400,
            "protocol": "Tcp",
            "resource_group_name": "9123-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network-n01649123.azurerm_network_security_group.nsg",
            "module.rgroup-n01649123.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network-n01649123",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3423e856-3fd7-427a-82f5-39d44c9bd937/resourceGroups/9123-RG/providers/Microsoft.Network/virtualNetworks/9123-VNET/subnets/9123-SUBNET",
            "name": "9123-SUBNET",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "9123-RG",
            "virtual_network_name": "9123-VNET"
          },
          "dependencies": [
            "module.network-n01649123.azurerm_virtual_network.vnet",
            "module.rgroup-n01649123.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network-n01649123",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "ga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3423e856-3fd7-427a-82f5-39d44c9bd937/resourceGroups/9123-RG/providers/Microsoft.Network/virtualNetworks/9123-VNET/subnets/9123-SUBNET",
            "network_security_group_id": "/subscriptions/3423e856-3fd7-427a-82f5-39d44c9bd937/resourceGroups/9123-RG/providers/Microsoft.Network/networkSecurityGroups/9123-NSG",
            "subnet_id": "/subscriptions/3423e856-3fd7-427a-82f5-39d44c9bd937/resourceGroups/9123-RG/providers/Microsoft.Network/virtualNetworks/9123-VNET/subnets/9123-SUBNET"
          },
          "dependencies": [
            "module.network-n01649123.azurerm_network_security_group.nsg",
            "module.network-n01649123.azurerm_subnet.subnet",
            "module.network-n01649123.azurerm_virtual_network.vnet",
            "module.rgroup-n01649123.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network-n01649123",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d259b107-b1b9-4fe5-b736-89195106a981",
            "id": "/subscriptions/3423e856-3fd7-427a-82f5-39d44c9bd937/resourceGroups/9123-RG/providers/Microsoft.Network/virtualNetworks/9123-VNET",
            "location": "canadacentral",
            "name": "9123-VNET",
            "resource_group_name": "9123-RG"
          },
          "dependencies": [
            "module.rgroup-n01649123.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.windows-n01649123",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "windows_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3423e856-3fd7-427a-82f5-39d44c9bd937/resourceGroups/9123-RG/providers/Microsoft.Network/networkInterfaces/win-9123-vm-nic1",
            "internal_domain_name_suffix": "a4yvtuvzwhsu5nzwremvcbvjqb.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "win-9123-vm-ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.1.7",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/3423e856-3fd7-427a-82f5-39d44c9bd937/resourceGroups/9123-RG/providers/Microsoft.Network/publicIPAddresses/win-9123-vm-pip1",
                "subnet_id": "/subscriptions/3423e856-3fd7-427a-82f5-39d44c9bd937/resourceGroups/9123-RG/providers/Microsoft.Network/virtualNetworks/9123-VNET/subnets/9123-SUBNET"
              }
            ],
            "location": "canadacentral",
            "name": "win-9123-vm-nic1",
            "private_ip_address": "10.0.1.7",
            "private_ip_addresses": [
              "10.0.1.7"
            ],
            "resource_group_name": "9123-RG"
          },
          "dependencies": [
            "module.network-n01649123.azurerm_subnet.subnet",
            "module.network-n01649123.azurerm_virtual_network.vnet",
            "module.rgroup-n01649123.azurerm_resource_group.rg",
            "module.windows-n01649123.azurerm_public_ip.windows_pip"
          ]
        }
      ]
    },
    {
      "module": "module.windows-n01649123",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "windows_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "win-9123-vm1",
            "fqdn": "win-9123-vm1.canadacentral.cloudapp.azure.com",
            "id": "/subscriptions/3423e856-3fd7-427a-82f5-39d44c9bd937/resourceGroups/9123-RG/providers/Microsoft.Network/publicIPAddresses/win-9123-vm-pip1",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "win-9123-vm-pip1",
            "resource_group_name": "9123-RG",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.rgroup-n01649123.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}